--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-beta.5",
     "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^5.0.0",
     "pug-html-loader": "^1.1.5",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.5.0",
